www/app/stylus/components/_overlayX.styl
.overlay-x-container 
    position: fixed
    z-index: 1000

    .ox-video-container 
        width: 100%
        height: 30%
        background: black
        position: fixed
        left: 0
        top: 0
        touch-action: none
        z-index: 1100
    

    .ox-content 
        position: fixed
        width: 100%
        height: 70%
        overflow:auto
        //padding: 30px 20px
        background: black
        color: $color_smoke
        will-change: transform
        top: 100%
        left: 0
        box-sizing: border-box
        z-index: 1050
        a
            color:white
    
    .ox-content-inner
        padding: 30px 20px

.accordion
    width:100%
    display:block
    .expandIcon
        max-width:10%
        vertical-align:top
        float:right
    .accordion-label
        max-width:90%
        display:inline-block
        margin: 0 0 5px 0
        line-height:1.5
        font-weight:bold
.collapsible
    //border-bottom:solid 1px $color_grey;
    position:relative
    p
        line-height: 1.2 !important;
        font-size: 16px !important;
        margin: 0 auto;
        overflow: hidden;
        padding-right:35px
    span.collapseIcon
        //border: solid 1px rgba(250, 250, 250, 0.6);
        height: 24px;
        display: block;
        position: absolute;
        bottom: 0;
        width: 24px;
        background-color: rgba(255, 255, 255, 0.77)
        right: 0;
        color:black

